--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
 
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-web')
 	compileOnly('org.projectlombok:lombok')
+	runtime group: 'com.h2database', name: 'h2', version: '1.3.148'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
